kubernetes/deploy/tree-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pipeline22-ingress
  namespace: pipeline22
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /tree
        pathType: Prefix
        backend:
          service:
            name: tree-app-service
            port:
              number: 8080
